# ocr_pdf

./: .gitignore  README.md  config.py  main.py  ocr-pipeline-runner.py  pyproject.toml  readme.txt  requirements.txt
package/: common.py  utility.py
