[project]
name = "ocrpdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytesseract==0.3.13",
    "ocrmypdf==17.4.0",
    "annotated-types==0.7.0",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "cryptography==46.0.6",
    "defusedxml==0.7.1",
    "deprecated==1.3.1",
    "deprecation==2.1.0",
    "fonttools==4.62.1",
    "fpdf2==2.8.7",
    "img2pdf==0.6.3",
    "lxml==6.0.2",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "numpy==2.4.4",
    "opencv-python==4.13.0.92",
    "packaging==26.0",
    "pdfminer-six==20260107",
    "pi-heif==1.3.0",
    "pikepdf==10.5.1",
    "pillow==12.2.0",
    "pluggy==1.6.0",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.20.0",
    "pymupdf==1.27.2.2",
    "pypdfium2==5.6.0",
    "rich==14.3.3",
    "typing-inspection==0.4.2",
    "typing-extensions==4.15.0",
    "uharfbuzz==0.53.6",
    "uv==0.11.3",
    "wrapt==2.1.2",
]
